# stockvisionz-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  api_config.py  credentials.py  dates.py  http_client.py  main.py  prompts.py  results.py  version_info.py
ml/: __init__.py  backtest.py  lab_backtest.py  lab_shared.py  lab_walk_forward.py  mean_reversion_drop.py  volume_profile_tracker.py  whale_watcher_backtest.py
tests/: test_cli_commands.py  test_cli_credentials.py  test_cli_http_client.py  test_cli_login.py  test_cli_results_format.py  test_cli_run_save_prompt.py
